Uploading Papper text files.
Uploading Papper text files.

--- a/Papper/Papper_MILP.ipynb
+++ b/Papper/Papper_MILP.ipynb
@@ -18,11 +18,11 @@
    "outputs": [],
    "source": [
     "# Import tables into dataframes from .txt files\n",
-    "df_outbound = pd.read_csv('Papper_outbound.txt', sep='\\t', index_col=0)\n",
-    "df_inbound = pd.read_csv('Papper_inbound.txt', sep='\\t', index_col=0)\n",
-    "df_CW_costs = pd.read_csv('Papper_CW_costs.txt', sep='\\t', index_col=0)\n",
-    "df_plant_costs_cap = pd.read_csv('Papper_plant_costs_cap.txt', sep='\\t', index_col=0)\n",
-    "df_demand = pd.read_csv('Papper_demand.txt', sep='\\t', index_col=0)\n",
+    "df_outbound = pd.read_csv('Papper/Papper_Data/Papper_outbound.txt', sep='\\t', index_col=0)\n",
+    "df_inbound = pd.read_csv('Papper/Papper_Data/Papper_inbound.txt', sep='\\t', index_col=0)\n",
+    "df_CW_costs = pd.read_csv('Papper/Papper_Data/Papper_CW_costs.txt', sep='\\t', index_col=0)\n",
+    "df_plant_costs_cap = pd.read_csv('Papper/Papper_Data/Papper_plant_costs_cap.txt', sep='\\t', index_col=0)\n",
+    "df_demand = pd.read_csv('Papper/Papper_Data/Papper_demand.txt', sep='\\t', index_col=0)\n",
     "\n",
     "print(df_outbound.describe())\n"
    ]
