--- a/Papper/Papper_MILP.ipynb
+++ b/Papper/Papper_MILP.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,23 +13,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "            RW 1       RW 2       RW 3      RW 4       RW 5      RW 6  \\\n",
+      "count   5.000000   5.000000   5.000000   5.00000   5.000000   5.00000   \n",
+      "mean   83.600000  89.200000  70.200000  82.20000  82.800000  62.80000   \n",
+      "std     6.913754   8.927486  14.184499  15.12283  12.153189   8.58487   \n",
+      "min    73.000000  78.000000  55.000000  61.00000  62.000000  54.00000   \n",
+      "25%    81.000000  82.000000  63.000000  75.00000  85.000000  58.00000   \n",
+      "50%    85.000000  91.000000  69.000000  82.00000  86.000000  58.00000   \n",
+      "75%    89.000000  97.000000  71.000000  95.00000  87.000000  71.00000   \n",
+      "max    90.000000  98.000000  93.000000  98.00000  94.000000  73.00000   \n",
+      "\n",
+      "            RW 7       RW 8       RW 9  \n",
+      "count   5.000000   5.000000   5.000000  \n",
+      "mean   84.400000  81.800000  64.400000  \n",
+      "std    13.427584  12.070626  14.570518  \n",
+      "min    62.000000  72.000000  50.000000  \n",
+      "25%    85.000000  73.000000  55.000000  \n",
+      "50%    88.000000  75.000000  59.000000  \n",
+      "75%    89.000000  90.000000  72.000000  \n",
+      "max    98.000000  99.000000  86.000000  \n"
+     ]
+    }
+   ],
    "source": [
     "# Import tables into dataframes from .txt files\n",
-    "df_outbound = pd.read_csv('Papper/Papper_Data/Papper_outbound.txt', sep='\\t', index_col=0)\n",
-    "df_inbound = pd.read_csv('Papper/Papper_Data/Papper_inbound.txt', sep='\\t', index_col=0)\n",
-    "df_CW_costs = pd.read_csv('Papper/Papper_Data/Papper_CW_costs.txt', sep='\\t', index_col=0)\n",
-    "df_plant_costs_cap = pd.read_csv('Papper/Papper_Data/Papper_plant_costs_cap.txt', sep='\\t', index_col=0)\n",
-    "df_demand = pd.read_csv('Papper/Papper_Data/Papper_demand.txt', sep='\\t', index_col=0)\n",
+    "df_outbound = pd.read_csv('Papper_Data/Papper_outbound.txt', sep='\\t', index_col=0)\n",
+    "df_inbound = pd.read_csv('Papper_Data/Papper_inbound.txt', sep='\\t', index_col=0)\n",
+    "df_CW_costs = pd.read_csv('Papper_Data/Papper_CW_costs.txt', sep='\\t', index_col=0)\n",
+    "df_plant_costs_cap = pd.read_csv('Papper_Data/Papper_plant_costs_cap.txt', sep='\\t', index_col=0)\n",
+    "df_demand = pd.read_csv('Papper_Data/Papper_demand.txt', sep='\\t', index_col=0)\n",
     "\n",
     "print(df_outbound.describe())\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,9 +70,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'CW 1': {'RW 1': 89, 'RW 2': 78, 'RW 3': 69, 'RW 4': 95, 'RW 5': 85, 'RW 6': 73, 'RW 7': 88, 'RW 8': 73, 'RW 9': 86}, 'CW 2': {'RW 1': 90, 'RW 2': 91, 'RW 3': 63, 'RW 4': 61, 'RW 5': 94, 'RW 6': 58, 'RW 7': 89, 'RW 8': 90, 'RW 9': 55}, 'CW 3': {'RW 1': 81, 'RW 2': 82, 'RW 3': 71, 'RW 4': 98, 'RW 5': 62, 'RW 6': 71, 'RW 7': 85, 'RW 8': 75, 'RW 9': 72}, 'CW 4': {'RW 1': 73, 'RW 2': 97, 'RW 3': 55, 'RW 4': 75, 'RW 5': 86, 'RW 6': 54, 'RW 7': 62, 'RW 8': 99, 'RW 9': 59}, 'CW 5': {'RW 1': 85, 'RW 2': 98, 'RW 3': 93, 'RW 4': 82, 'RW 5': 87, 'RW 6': 58, 'RW 7': 98, 'RW 8': 72, 'RW 9': 50}}\n",
+      "{'CW 1': {'Plant 1': 77, 'Plant 2': 54}, 'CW 2': {'Plant 1': 48, 'Plant 2': 33}, 'CW 3': {'Plant 1': 41, 'Plant 2': 21}, 'CW 4': {'Plant 1': 57, 'Plant 2': 94}, 'CW 5': {'Plant 1': 94, 'Plant 2': 44}}\n",
+      "{'CW 1': 8, 'CW 2': 10, 'CW 3': 25, 'CW 4': 30, 'CW 5': 50}\n",
+      "{'CW 1': 100000, 'CW 2': 90000, 'CW 3': 80000, 'CW 4': 70000, 'CW 5': 60000}\n",
+      "{'Plant 1': 8, 'Plant 2': 13}\n",
+      "{'Plant 1': 1500, 'Plant 2': 500}\n",
+      "{'RW 1': 140, 'RW 2': 180, 'RW 3': 240, 'RW 4': 210, 'RW 5': 175, 'RW 6': 130, 'RW 7': 320, 'RW 8': 280, 'RW 9': 160}\n",
+      "['CW 1', 'CW 2', 'CW 3', 'CW 4', 'CW 5']\n",
+      "['Plant 1', 'Plant 2']\n",
+      "['RW 1', 'RW 2', 'RW 3', 'RW 4', 'RW 5', 'RW 6', 'RW 7', 'RW 8', 'RW 9']\n"
+     ]
+    }
+   ],
    "source": [
     "#create dictionaries for costs and constraints\n",
     "outbound_dict = df_outbound.to_dict(orient='index')\n",
@@ -71,9 +114,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Set parameter Username\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{('Plant 1', 'CW 1'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 1', 'CW 2'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 1', 'CW 3'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 1', 'CW 4'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 1', 'CW 5'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 2', 'CW 1'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 2', 'CW 2'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 2', 'CW 3'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 2', 'CW 4'): <gurobi.Var *Awaiting Model Update*>,\n",
+       " ('Plant 2', 'CW 5'): <gurobi.Var *Awaiting Model Update*>}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Model\n",
     "model = gp.Model(\"Network Design\")\n",
@@ -97,9 +167,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<gurobi.Model Continuous instance Network Design: 0 constrs, 0 vars, Parameter changes: Username=(user-defined)>"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Objective function: Minimize total cost\n",
     "model.setObjective(\n",
@@ -116,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +239,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\Local User\\AppData\\Local\\Temp\\ipykernel_15024\\3350359784.py:44: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  df_Within_Range = df_outbound.applymap(lambda x: Range_Condition(x, max_distance))\n"
+     ]
+    }
+   ],
    "source": [
     "#Level of Service Constraints\n",
     "#MAX DISTANCE FROM DC TO CUSTOMER -----------------------------------------------------------------\n",
@@ -241,18 +331,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Gurobi Optimizer version 11.0.3 build v11.0.3rc0 (win64 - Windows 10.0 (19045.2))\n",
+      "\n",
+      "CPU model: Intel(R) Core(TM) i7-6700HQ CPU @ 2.60GHz, instruction set [SSE2|AVX|AVX2]\n",
+      "Thread count: 4 physical cores, 8 logical processors, using up to 8 threads\n",
+      "\n",
+      "Optimize a model with 29 rows, 60 columns and 232 nonzeros\n",
+      "Model fingerprint: 0x5d01ce29\n",
+      "Variable types: 0 continuous, 60 integer (5 binary)\n",
+      "Coefficient statistics:\n",
+      "  Matrix range     [1e+00, 1e+06]\n",
+      "  Objective range  [3e+01, 1e+05]\n",
+      "  Bounds range     [1e+00, 1e+00]\n",
+      "  RHS range        [1e+00, 2e+03]\n",
+      "Found heuristic solution: objective 680207.00000\n",
+      "Presolve removed 8 rows and 3 columns\n",
+      "Presolve time: 0.01s\n",
+      "Presolved: 21 rows, 57 columns, 162 nonzeros\n",
+      "Variable types: 0 continuous, 57 integer (2 binary)\n",
+      "Found heuristic solution: objective 680165.00000\n",
+      "\n",
+      "Root relaxation: objective 4.908820e+05, 22 iterations, 0.00 seconds (0.00 work units)\n",
+      "\n",
+      "    Nodes    |    Current Node    |     Objective Bounds      |     Work\n",
+      " Expl Unexpl |  Obj  Depth IntInf | Incumbent    BestBd   Gap | It/Node Time\n",
+      "\n",
+      "*    0     0               0    490882.00000 490882.000  0.00%     -    0s\n",
+      "\n",
+      "Explored 1 nodes (22 simplex iterations) in 0.09 seconds (0.00 work units)\n",
+      "Thread count was 8 (of 8 available processors)\n",
+      "\n",
+      "Solution count 3: 490882 680165 680207 \n",
+      "\n",
+      "Optimal solution found (tolerance 1.00e-04)\n",
+      "Best objective 4.908820000000e+05, best bound 4.908820000000e+05, gap 0.0000%\n"
+     ]
+    }
+   ],
    "source": [
     "model.optimize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Status: Optimal\n",
+      "Total Cost: 490882.0\n",
+      "\n",
+      "Retail Warehouse     Demanded   Delivered \n",
+      "----------------------------------------\n",
+      "RW 1                 140        140.00    \n",
+      "RW 2                 180        180.00    \n",
+      "RW 3                 240        240.00    \n",
+      "RW 4                 210        210.00    \n",
+      "RW 5                 175        175.00    \n",
+      "RW 6                 130        130.00    \n",
+      "RW 7                 320        320.00    \n",
+      "RW 8                 280        280.00    \n",
+      "RW 9                 160        160.00    \n",
+      "\n",
+      "Decision Variable Values (non-zero):\n",
+      "Variable             Value     \n",
+      "------------------------------\n",
+      "Inbound[Plant 1,CW 2] 874.00    \n",
+      "Inbound[Plant 1,CW 3] 275.00    \n",
+      "Inbound[Plant 1,CW 4] 186.00    \n",
+      "Inbound[Plant 2,CW 3] 500.00    \n",
+      "Outbound[CW 2,RW 3]  240.00    \n",
+      "Outbound[CW 2,RW 4]  210.00    \n",
+      "Outbound[CW 2,RW 6]  130.00    \n",
+      "Outbound[CW 2,RW 7]  134.00    \n",
+      "Outbound[CW 2,RW 9]  160.00    \n",
+      "Outbound[CW 3,RW 1]  140.00    \n",
+      "Outbound[CW 3,RW 2]  180.00    \n",
+      "Outbound[CW 3,RW 5]  175.00    \n",
+      "Outbound[CW 3,RW 8]  280.00    \n",
+      "Outbound[CW 4,RW 7]  186.00    \n",
+      "Binary[CW 2]         1.00      \n",
+      "Binary[CW 3]         1.00      \n",
+      "Binary[CW 4]         1.00      \n"
+     ]
+    }
+   ],
    "source": [
     "if model.status == GRB.OPTIMAL:\n",
     "    print(f\"Status: Optimal\")\n",
@@ -280,9 +453,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "inbound shipping:  74329.0\n",
+      "outbound shipping:  125678.0\n",
+      "plant variable:  17180.0\n",
+      "cw variable:  33695.0\n",
+      "plant fixed:  240000.0\n"
+     ]
+    }
+   ],
    "source": [
     "print('inbound shipping: ', gp.quicksum(inbound[plant, cw] * inbound_dict[cw][plant] for plant in plants for cw in cws).getValue())\n",
     "print('outbound shipping: ', gp.quicksum(outbound[cw, rw] * outbound_dict[cw][rw] for cw in cws for rw in rws).getValue())\n",
@@ -294,9 +479,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "env2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
